--- a/css/index.css
+++ b/css/index.css
@@ -89,11 +89,65 @@ table td:not(:nth-child(4)) span, table th:not(:nth-child(4)) span {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 table span {
   white-space: nowrap;
   text-overflow: ellipsis;
   display: block;
   overflow: hidden;
+}
+
+.drop-zone {
+  padding: 25px;
+  border: 2px dashed #ccc;
+  border-radius: 6px;
+  text-align: center;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  background: #f8f9fa;
+  position: relative;
+  cursor: pointer;
+}
+.drop-zone:hover {
+  background: #f1f3f5;
+  border-color: #adb5bd;
+}
+.drop-zone.drop-zone-active {
+  background-color: #e8f4ff;
+  border-color: cornflowerblue;
+}
+.drop-zone input[type=file] {
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 10;
+  cursor: pointer;
+}
+.drop-zone .drop-zone-prompt p {
+  margin: 0;
+  color: #6c757d;
+  font-size: 16px;
+  font-weight: 400;
+}
+.drop-zone + .form-text {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.card-body {
+  min-height: 100px;
+  position: relative;
+}
+.card-body p {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }/*# sourceMappingURL=index.css.map */
