--- a/react-tools/src/index.scss
+++ b/react-tools/src/index.scss
@@ -1,37 +1,58 @@
+@use "./tailspin-all.min";
+
 body {
     color: gray;
-    font-family: 'Fira Sans', Arial, sans-serif;
+    font-family: "Open Sans", Arial, sans-serif;
     position: relative;
+    overflow-y: scroll;
 }
 
 header {
     width: 100%;
-    padding: 20px 0 15px 0;
-    border-bottom: 1px solid gainsboro;
+    padding: 30px 0;
     background: #f7f7f7;
     text-align: center;
 
     h1 {
+        margin: 0;
         color: gray;
         font-size: 20px;
-        font-weight: 100;
         line-height: normal;
         text-transform: uppercase;
+        letter-spacing: 5px;
+    }
+}
+
+.tool-nav {
+    background: #f7f7f7;
+    border-bottom: 1px solid gainsboro;
+    padding: 0 0 30px 0;
+
+    button {
+        margin: 0 10px;
+        padding: 10px 20px;
+        background: rgba(black, 0.05);
+        border: 1px solid rgba(black, 0.1);
+        line-height: 1.4;
+
+        &.active, &:hover.active, &:hover {
+            background: rgba(black, 0.1)
+        }
     }
 }
 
 h2 {
     margin: 0 0 30px 0;
     color: gray;
-    font-size: 18px;
-    font-weight: 600;
+    font-size: 20px;
+    font-weight: 700;
     text-align: center;
 }
 
 label {
     margin: 10px 0 0 0;
-    font-size: 14px;
-    font-weight: 100;
+    font-size: 15px;
+    font-weight: 400;
     text-transform: uppercase;
 }
 
@@ -41,8 +62,8 @@ label {
     border: 1px solid gainsboro;
     border-radius: 4px;
     color: cornflowerblue !important;
-    font-size: 22px;
-    font-weight: 600;
+    font-size: 20px;
+    font-weight: 700;
     text-align: center;
     appearance: none;
 }
@@ -71,6 +92,27 @@ select {
 
 ::-webkit-input-placeholder {
 	color: cornflowerblue !important;
+}
+
+// Hide placeholder when input is focused
+input:focus::-webkit-input-placeholder {
+    color: transparent !important;
+}
+
+input:focus:-moz-placeholder {
+    color: transparent !important;
+}
+
+input:focus::-moz-placeholder {
+    color: transparent !important;
+}
+
+input:focus:-ms-input-placeholder {
+    color: transparent !important;
+}
+
+input:focus::-ms-input-placeholder {
+    color: transparent !important;
 }
 
 table {
@@ -104,9 +146,10 @@ table {
     }
 }
 
-// Drop zone styles for image upload
 .drop-zone {
-    padding: 25px;
+    width: calc(100% / 1.5);
+    margin: 0 auto;
+    padding: 30px 60px;
     border: 2px dashed #ccc;
     border-radius: 6px;
     text-align: center;
@@ -140,15 +183,10 @@ table {
 
         p {
             margin: 0;
-            color: #6c757d;
+            color: cornflowerblue;
             font-size: 16px;
-            font-weight: 400;
+            font-weight: 500;
         }
-    }
-
-    & + .form-text {
-        width: 80%;
-        margin: 0 auto;
     }
 }
 
@@ -163,4 +201,9 @@ table {
         left: 50%;
         transform: translate(-50%, -50%);
     }
+}
+
+.card-footer {
+    color: #dc3545;
+    font-size: 14px;
 }
