--- a/src/index.scss
+++ b/src/index.scss
@@ -23,20 +23,25 @@ header {
     }
 }
 
-.tool-nav {
+nav {
+    padding: 0 0 30px 0;
     background: #f7f7f7;
     border-bottom: 1px solid gainsboro;
-    padding: 0 0 30px 0;
+    font-size: 14px;
+    font-weight: 600;
 
-    button {
-        margin: 0 10px;
+    a {
+        margin: 0 8px;
         padding: 10px 20px;
         background: rgba(black, 0.05);
         border: 1px solid rgba(black, 0.1);
+        border-radius: 4px;
         line-height: 1.4;
 
-        &.active, &:hover.active, &:hover {
-            background: rgba(black, 0.1)
+        &.current, &:hover.current, &:hover {
+            background: rgba(black, 0.1);
+            color: #0056b3;
+            text-decoration: none;
         }
     }
 }
